# react-native-svg

./: .editorconfig  .eslintignore  .eslintrc  .eslintrc.js  .flowconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .npmignore  .npmrc  .prettierrc  .prettierrc.js  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Circle.js  Ellipse.js  LICENSE  Line.js  Polygon.js  Polyline.js  README.md  RNSVG.podspec  Svg.js  USAGE.md  babel.config.js  cn.md  index.d.ts  index.js  index.web.js  jest.config.ts  package-lock.json  package.json  react-native-svg-12.1.1.tgz  react-native-svg-12.2.0.tgz  react-native-svg-fixed-12.1.1.tgz  react-native.config.js  shell.nix  (+4 more)
.github/: PULL_REQUEST_TEMPLATE.md  stale.yml
Example/: .gitignore  App.js  App.tsx  Modal.tsx  Modal.web.js  README.md  Svg.tsx  Svg.web.tsx  babel.config.js  examples.js  examples.tsx  exp.json  index.js  main.js  metro.config.js  msbuild.binlog  package.json  tsconfig.json  webpack.config.js
FabricExample/: App.js  App.tsx  metro.config.js  package.json  react-native.config.js
TestApp/: .gitignore  App.js  app.json  metro.config.js  package.json  react-native.config.js
TestsExample/: App.js  app.json  babel.config.js  metro.config.js  package-lock.json  package.json
__tests__/: css.test.tsx  web.prepare.test.ts
android/: .npmignore  CMakeLists.txt  build.gradle  gradle.properties  spotless.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/src/RenderableViewManager73/java/com/horcrux/svg/: RenderableViewManager.java
android/src/RenderableViewManager75/java/com/horcrux/svg/: RenderableViewManager.java
android/src/SvgPackage73/java/com/horcrux/svg/: SvgPackage.java
android/src/SvgViewManager75/java/com/horcrux/svg/: SvgViewManager.java
android/src/borderRadiusRn75/java/com/horcrux/svg/: SvgViewManager.java
android/src/deprecated/java/com/horcrux/svg/: SvgViewManager.java
android/src/fabric/java/com/horcrux/svg/: FabricEnabledViewGroup.java  RNSvgComponentsRegistry.java
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: jni-adapter.cpp
android/src/main/java/com/horcrux/svg/: AlignmentBaseline.java  BUCK  BezierTransformer.java  Brush.java  CircleShadowNode.java  CircleView.java  ClipPathShadowNode.java  ClipPathView.java  CustomFilter.java  DefinitionShadowNode.java  DefinitionView.java  DefsShadowNode.java  DefsView.java  Direction.java  EllipseShadowNode.java  EllipseView.java  FabricEnabledViewGroup.java  FeBlendView.java  FeColorMatrixView.java  FeComponentTransferFunctionView.java  FeComponentTransferView.java  FeCompositeView.java  FeConvolveMatrixView.java  FeDisplacementMap.java  FeFloodView.java  FeGaussianBlurView.java  FeMergeView.java  FeMorphologyView.java  FeOffsetView.java  FeTileView.java  FeTurbulenceView.java  FilterPrimitiveView.java  FilterProperties.java  FilterRegion.java  FilterUtils.java  FilterView.java  FontData.java  FontStyle.java  FontVariantLigatures.java  FontWeight.java  (+92 more)
android/src/main/java/com/horcrux/svg/events/: SvgLoadEvent.java  SvgOnLayoutEvent.java
android/src/main/jni/: Android.mk  CMakeLists.txt  OnLoad.cpp  RNSvgComponentsRegistry.cpp  RNSvgComponentsRegistry.h  rnsvg.cpp  rnsvg.h
android/src/paper/java/com/facebook/react/viewmanagers/: RNSVGCircleManagerDelegate.java  RNSVGCircleManagerInterface.java  RNSVGClipPathManagerDelegate.java  RNSVGClipPathManagerInterface.java  RNSVGDefsManagerDelegate.java  RNSVGDefsManagerInterface.java  RNSVGEllipseManagerDelegate.java  RNSVGEllipseManagerInterface.java  RNSVGFeBlendManagerDelegate.java  RNSVGFeBlendManagerInterface.java  RNSVGFeColorMatrixManagerDelegate.java  RNSVGFeColorMatrixManagerInterface.java  RNSVGFeComponentTransferFunctionManagerDelegate.java  RNSVGFeComponentTransferFunctionManagerInterface.java  RNSVGFeComponentTransferManagerDelegate.java  RNSVGFeComponentTransferManagerInterface.java  RNSVGFeCompositeManagerDelegate.java  RNSVGFeCompositeManagerInterface.java  RNSVGFeConvolveMatrixManagerDelegate.java  RNSVGFeConvolveMatrixManagerInterface.java  RNSVGFeDisplacementMapManagerDelegate.java  RNSVGFeDisplacementMapManagerInterface.java  RNSVGFeFloodManagerDelegate.java  RNSVGFeFloodManagerInterface.java  RNSVGFeGaussianBlurManagerDelegate.java  RNSVGFeGaussianBlurManagerInterface.java  RNSVGFeMergeManagerDelegate.java  RNSVGFeMergeManagerInterface.java  RNSVGFeMorphologyManagerDelegate.java  RNSVGFeMorphologyManagerInterface.java  RNSVGFeOffsetManagerDelegate.java  RNSVGFeOffsetManagerInterface.java  RNSVGFeTileManagerDelegate.java  RNSVGFeTileManagerInterface.java  RNSVGFeTurbulenceManagerDelegate.java  RNSVGFeTurbulenceManagerInterface.java  RNSVGFilterManagerDelegate.java  RNSVGFilterManagerInterface.java  RNSVGForeignObjectManagerDelegate.java  RNSVGForeignObjectManagerInterface.java  (+34 more)
android/src/paper/java/com/horcrux/svg/: FabricEnabledViewGroup.java  NativeSvgRenderableModuleSpec.java  NativeSvgViewModuleSpec.java
android/src/transformRn73/java/com/horcrux/svg/: SvgViewManager.java
apple/: RNSVGNode.h  RNSVGNode.m  RNSVGNode.mm  RNSVGNodeFabric.h  RNSVGNodeFabric.mm  RNSVGRenderable.h  RNSVGRenderable.m  RNSVGRenderable.mm  RNSVGRenderableFabric.h  RNSVGRenderableFabric.mm  RNSVGRenderableModule.h  RNSVGRenderableModule.mm  RNSVGSvgViewModule.h  RNSVGSvgViewModule.mm  RNSVGUIKit.h  RNSVGUIKit.macos.m  RNSVGUIKit.macos.mm
apps/: index.tsx  tsconfig.json
common/: Android.mk
css/: index.ts  package.json
e2e/: env.ts  failedCases.json  generateReferences.ts  globals.d.ts  helpers.ts  matchTestCases.ts  readFailedCases.ts  setupJest.ts  teardownJest.ts  types.ts
elements/: Circle.js  ClipPath.js  Defs.js  Ellipse.js  FEBlend.js  FEColorMatrix.js  FEComposite.js  FEGaussianBlur.js  FEMerge.js  FEMergeNode.js  FEOffset.js  FEPointLight.js  FESpecularLighting.js  Filter.js  G.js  Gradient.js  Image.js  Image.web.js  Line.js  LinearGradient.js  Mask.js  Path.js  Pattern.js  Polygon.js  Polyline.js  RadialGradient.js  Rect.js  Shape.js  Span.js  Stop.js  Stop.web.js  Svg.js  Svg.web.js  Symbol.js  (+5 more)
(+1875 files in other folders)
